--- a/about.html
+++ b/about.html
@@ -11,29 +11,30 @@
 </style>
 </head> 
 
-<header>
-    <a href="index.html"><img src="images/logo.png" width="100" alt="logo"></a>
-     <h1>CyberIntel</h1> 
-     <nav>
-        <p>
-            <a href="index.html">Home</a>
-        </p>
-        <p>
-            <a href="about.html">ABOUT US</a>
-        </p>
-        <p>
-            <a href="#">Topic 3</a>
-        </p>
-        <p>
-            <a href="#">Topic 4</a>
-        </p>
-        <p>
-            <a href="#">Topic 5</a>
-        </p>
-    </nav>
- </header>
 
-<body>        
+
+<body>  
+    <header>
+        <a href="index.html"><img src="images/logo.png" width="100" alt="logo"></a>
+         <h1>CyberIntel</h1> 
+         <nav>
+            <p>
+                <a href="index.html">Home</a>
+            </p>
+            <p>
+                <a href="about.html">ABOUT US</a>
+            </p>
+            <p>
+                <a href="#">Topic 3</a>
+            </p>
+            <p>
+                <a href="#">Topic 4</a>
+            </p>
+            <p>
+                <a href="#">Topic 5</a>
+            </p>
+        </nav>
+     </header>      
     <main>
         <section> 
             <article> 
@@ -46,7 +47,8 @@
                   Since its establishment, CyberIntel has helped hundreds of companies manage and responde to cybersecurity incidents. 
                   It's regarded one to the TOP 10 cybersecurity service provider in the Northeast USA.
                 </p>
-            </section>
+            </article>
+        </section>
 
             <hr> <!---create a horizontal rule-->
 
