--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html> 
 <head> 
 <meta charset="UTF-8">
-<title> Chapter 4: Term Project</title>
-<link rel="stylesheet" href="mystyles.css">
+<title> Chapter 5: Term Project</title>
+<link rel="stylesheet" href="../mystyles.css">
 </head> 
 <body> 
     <header>
-       <a href="index.html"><img src="images/logo.png" width="100" alt="logo"></a>
+       <a href="index.html"><img src="../images/logo.png" width="100" alt="logo"></a>
         <h1>CyberIntel</h1> 
+        <div class="clearfix"></div>
         <nav>
             <p>
                 <a href="index.html">Home</a>
             </p>
             <p>
-                <a href="about.html">ABOUT US</a>
+                <a href="pages/about.html">ABOUT US</a>
             </p>
             <p>
-                <a href="#">Topic 3</a>
+                <a href="pages/data.html">DATA</a>
             </p>
             <p>
                 <a href="#">Topic 4</a>
@@ -77,7 +78,7 @@
         </main>
          
         <footer>
-            <p>Footer content coming soon</p>
+            <p>Site copyright©2024 by Lili Chen</p>
         </footer>
 </body> 
 
