--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
 </head> 
 
 <header>
-    <a href="index.html"><img src="../images/logo.png" width="100" alt="logo"></a>
+    <a href="../index.html"><img src="../images/logo.png" width="100" alt="logo"></a>
      <h1>CyberIntel</h1> 
      <div class="clearfix"></div>
      <nav>
