--- a/pages/data.html
+++ b/pages/data.html
@@ -35,7 +35,7 @@
 </head> 
 <body> 
     <header>
-       <a href="index.html"><img src="../images/logo.png" width="100" alt="logo"></a>
+       <a href="../index.html"><img src="../images/logo.png" width="100" alt="logo"></a>
         <h1>CyberIntel</h1> 
         <div class="clearfix"></div>
         <nav>
