--- a/pages/data.html
+++ b/pages/data.html
@@ -11,21 +11,21 @@
 
         table{
             font-family: Arial, Verdana, sans-serif;
-            border: solid 8px maroon;
+            border: solid 8px var(--dark-color);
             border-collapse: collapse;
         }
         tr th, tr td {
-            border: solid thin maroon;
+            border: solid thin var(--dark-color);
         }
 
         tr td {
-            background-color: mistyrose;
-            color:maroon;
+            background-color: var(--light-color);
+            color:var(--dark-color);
         }
 
         tr th {
-            background-color:maroon;
-            color:mistyrose;
+            background-color:var(--dark-color);
+            color:var(--light-color);
         }
 
        td, th {
