margin inline update

--- a/pages/data.html
+++ b/pages/data.html
@@ -31,6 +31,10 @@
        td, th {
             padding:5px 10px;
         }
+
+        main {
+            margin-inline:center;
+        }
     </style>
 </head> 
 <body> 
