--- a/pages/data.html
+++ b/pages/data.html
@@ -33,7 +33,8 @@
         }
 
         main {
-            margin-inline:center;
+            margin-inline:auto;
+            padding:10px;
         }
     </style>
 </head> 
