data background update

--- a/pages/data.html
+++ b/pages/data.html
@@ -36,6 +36,10 @@
             margin-inline:auto;
             padding:20px;
         }
+
+        body {
+            background-image: image(../images/cyber-background.png);
+        }
     </style>
 </head> 
 <body> 
