--- a/pages/data.html
+++ b/pages/data.html
@@ -38,7 +38,7 @@
         }
 
         body {
-            background-image: url(../images/cyber-background.png);
+            background-image: url("../images/cyber-background.png");
         }
     </style>
 </head> 
