--- a/pages/about.html
+++ b/pages/about.html
@@ -12,6 +12,12 @@
     h3+img {
          float:right;
     }
+
+    section.people #PersonImage{
+        border-radius:15px;
+        box-shadow: 10px 10px 10px;
+    }
+
 </style>
 </head> 
 
@@ -51,19 +57,20 @@
                   Since its establishment, CyberIntel has helped hundreds of companies manage and responde to cybersecurity incidents. 
                   It's regarded one to the TOP 10 cybersecurity service provider in the Northeast USA.
                 </p>
-            </section>
+             </article>
+        </section>
 
             <hr> <!---create a horizontal rule-->
 
-            <section class="people">
-                <h2>Our People</h2>
-                    <button onClick="carlos()">Carlos Love</button> 
-                    <button onClick="susan()">Susan Bowen</button>
-                    <h3 id="person"></h3>
-                    <img id="PersonImage">
-                    <p id="PersonInfo"></p>
-                    <div class="clearfix"></div> 
-            </section>
+        <section class="people">
+            <h2>Our People</h2>
+                <button onClick="carlos()">Carlos Love</button> 
+                <button onClick="susan()">Susan Bowen</button>
+                <h3 id="person"></h3>
+                <img id="PersonImage">
+                <p id="PersonInfo"></p>
+                <div class="clearfix"></div> 
+        </section>
 
     </main> 
     <footer>
