--- a/pages/data.html
+++ b/pages/data.html
@@ -32,14 +32,51 @@
             padding:5px 10px;
         }
 
+        /* Alternating row colors for the table */
+        table tr:nth-child(odd) {
+            background-color: hsl(0, 46%, 82%); /* Lighter shade for odd rows */
+        }
+
+        table tr:nth-child(even) {
+            background-color: hsl(0, 81%, 72%); /* darker shade for even rows */
+        }
+
         main {
             margin-inline:auto;
             padding:20px;
+            width: 800px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         body {
             background-image: url("../images/cyber-background.png");
         }
+
+        p.findSession {
+            display:inline-block;
+        }
+
+        div#myDiv{
+            border: thick solid blue;
+            color:green;
+
+
+        }
+
+        /* Responsive design adjustments */
+        @media (min-width: 800px) {
+            main {
+                padding: 20px;
+            }
+            body {
+                background-image: url('your-background-image.jpg'); /* Adjust as necessary */
+                background-size: cover;
+                background-repeat: repeat;
+            }
+    }
+
     </style>
 </head> 
 <body> 
@@ -59,10 +96,10 @@
                 <a href="data.html">DATA</a>
             </p>
             <p>
-                <a href="#">Topic 4</a>
+                <a href="join.html">JOIN</a>
             </p>
             <p>
-                <a href="#">Topic 5</a>
+                <a href="Shapes.html">SHAPE</a>
             </p>
         </nav>
     </header>
@@ -77,47 +114,139 @@
 
             <table>
                 <tr>
-                    <th>Training Program</th>
+                    <th id="programCol">Training Program</th>
                     <th>Trainer</th>
                     <th>Training Date</th>
-                    <th>Sessions</th>
+                    <th id="SessionCol">Sessions</th>
                     <th>Location</th>
                 </tr>
 
                 <tr>
-                    <td>Employee Cybersecurity Best Practice Training-One</td>
+                    <td id="program1">Employee Cybersecurity Best Practice Training-One</td>
                     <td>Dr. Stephen Bright</td>
                     <td>May 5th,2024</td>
-                    <td>2</td>
+                    <td id="session1">2</td>
                     <td>Craig Lee 112</td>
                 </tr>
                 <tr>
-                    <td>Employee Cybersecurity Best Practice Training-Two</td>
+                    <td id="program2">Employee Cybersecurity Best Practice Training-Two</td>
                     <td>Dr. Michael Brown</td>
                     <td>May 30th, 2024</td>
-                    <td>3</td>
+                    <td id="session2">3</td>
                     <td>Craig 110</td>
                 </tr>
                 <tr>
-                    <td>Cyber Storm</td>
+                    <td id="program3">Cyber Storm</td>
                     <td>Dr. John Washington</td>
                     <td>June 1st, 2024</td>
-                    <td>2</td>
+                    <td id="session3">2</td>
                     <td>Alger Hall 108</td>
                 </tr>
                 <tr>
-                    <td>Tabletop Excise Package</td>
+                    <td id="program4">Tabletop Excise Package</td>
                     <td>Dr. Max Hinrich</td>
                     <td>June 15th, 2024</td>
-                    <td>2</td>
+                    <td id="session4">2</td>
                     <td>Craig Lee 210</td>
                 </tr>
             </table>
+
+            <p class="findSession">Find training event over this session numbers.</p>
+            <input id="input" type="number" placeholder="placeholder">
+            <button id="myButton" onClick="find()">Find!</button>
+            <div id="myDiv"></div>
+
+            <button id="findBtn" onClick="add()">Add</button>
+            <button id="addBtn" onClick="add()">Add</button>
+            <button id="removeBtn" onClick="remove()">Remove</button>
+
         </main>
         <footer>
             <p>Site copyright©2024 by Lili Chen</p> 
         </footer>
 
+
+        <script>
+
+            const courseName = ['Element Cyber Training Package', 'Intermidiant Cyber Training Package', 'Advanced Cyber Training Package'];
+                const myButton = document.getElementById("myButton");
+                const findButton = document.getElementById('findBtn');
+                const addButton = document.getElementById("addBtn");
+                const removeButton = document.getElementById("removeBtn");
+                myButton.addEventListener("click", find);
+                findButton.addEventListener("click",findCourse);
+                addButton.addEventListener("click", addCourse);
+                removeButton.addEventListener("click", removeCourse);
+
+            function find(){
+                console.log("Running the function");
+                let sessionNum1 = parseInt(document.getElementById("session1").value);
+                let sessionNum2 = parseInt(document.getElementById("session2").value);
+                let sessionNum3 = parseInt(document.getElementById("session3").value);
+                let sessionNum4 = parseInt(document.getElementById("session4").value);
+                let inputNum = parseInt(document.getElementById('input'));
+                if (inputNum < sessionNum1){
+                    const newP = document.createElement("p");
+                    const newText = document.getElementById('program1').innerText;
+                    newP.appendChild(newText);
+                    const myDiv = document.getElementById('myDiv');
+                    myDiv.appendChild(newP);
+                }else if(inputNum < sessionNum2) {
+                    const newP = document.createElement("p");
+                    const newText = document.getElementById('program2').innerText;
+                    newP.appendChild(newText);
+                    const myDiv = document.getElementById('myDiv');
+                    myDiv.appendChild(newP);
+                }else if (inputNum < sessionNum3){
+                    const newP = document.createElement("p");
+                    const newText = document.getElementById('program3').innerText;
+                    newP.appendChild(newText);
+                    const myDiv = document.getElementById('myDiv');
+                    myDiv.appendChild(newP);
+                }else if (inputNum < sessionNum4){
+                    const newP = document.createElement("p");
+                    const newText = document.getElementById('program4').innerText;
+                    newP.appendChild(newText);
+                    const myDiv = document.getElementById('myDiv');
+                    myDiv.appendChild(newP);
+                }else {alert("please enter a valid number.")}
+            }
+
+
+            function findCourse() {
+                let courseNumber = -1;
+                do {
+                    courseNumber = prompt("Enter course number (1 to " + courseName.length + "):");
+                    if (courseNumber === null) return; // User clicked cancel
+                    courseNumber = parseInt(courseNumber);
+                    if (isNaN(courseNumber) || courseNumber < 1 || courseNumber > courseName.length) {
+                        alert("Please enter a valid course number.");
+                    }
+                } while (isNaN(courseNumber) || courseNumber < 1 || courseNumber > courseName.length);
+
+                const selectedCourse = courseName[courseNumber - 1];
+                alert("Selected course: " + selectedCourse);
+            }
+
+            function addCourse() {
+                const newCourse = prompt("Enter the name of a cybersecurity trainning package name:");
+                // return if user clicked cancel or no input
+                if (newCourse === null || newCourse === "") return; 
+                if (!courseName.includes(newCourse)) {
+                    courseName.push(newCourse);
+                    alert("Course added successfully!");
+                } else {
+                    alert("This course already exists in the list.");
+                }
+            }
+
+            function removeCourse() {
+                if (courseName.length === 0) {
+                    alert("No course left to remove.");
+                    return;
+                }
+            }
+        </script>
 </body> 
 
 </html>
