--- a/pages/data.html
+++ b/pages/data.html
@@ -168,7 +168,7 @@
 
         <script>
 
-            const courseName = ['Element Cyber Training Package', 'Intermidiant Cyber Training Package', 'Advanced Cyber Training Package'];
+            const courseName = ['Employee Cybersecurity Best Practice Training-One', 'Employee Cybersecurity Best Practice Training-Two','Cyber Storm', 'Tabletop Excise Package','Element Cyber Training Package', 'Intermidiant Cyber Training Package', 'Advanced Cyber Training Package'];
                 const myButton = document.getElementById("myButton");
                 const findButton = document.getElementById('findBtn');
                 const addButton = document.getElementById("addBtn");
