--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
 <title> Term Project</title>
 <link rel="stylesheet" href="../mystyles.css">
 <style>
-  .people img  {
+  section.people img  {
         width:100px;
     }
 
@@ -18,22 +18,22 @@
         box-shadow: -10px 10px 10px;
     }
 
-    .image-grid {
+    section div.image-grid {
             display: grid;
             gap: 15px;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             margin-top: 20px;
         }
-    .cyberImage {
+    section div.cyberImage {
         position: relative;
         background-color:blanchedalmond;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     }
-    .icyberImage img {
+    section div.icyberImage img {
         width: 100%;
         display: block;
     }
-    .cyberImage  p {
+    div.cyberImage  p {
         position: absolute;
         bottom: 5px;
         left: 50%;
