--- a/pages/about.html
+++ b/pages/about.html
@@ -76,14 +76,14 @@
         <section> 
 
             <section class="image-grid">
-                <div class="cyberImage"><img src="image1.png" alt="Image 1"><p>Cyber Training 1</p></div>
-                <div class="cyberImage"><img src="image2.png" alt="Image 2"><p>Cyber Training 2</p></div>
-                <div class="cyberImage"><img src="image3.png" alt="Image 3"><p>Cyber Training 3</p></div>
-                <div class="cyberImage"><img src="image4.png" alt="Image 4"><p>Cyber Training 4</p></div>
-                <div class="cyberImage"><img src="image5.png" alt="Image 5"><p>Cyber Training 5</p></div>
-                <div class="cyberImage"><img src="image6.png" alt="Image 6"><p>Cyber Training 6</p></div>
-                <div class="cyberImage"><img src="image7.png" alt="Image 7"><p>Cyber Training 7</p></div>
-                <div class="cyberImage"><img src="image8.png" alt="Image 8"><p>Cyber Training 8</p></div>
+                <div class="cyberImage"><img src="../images/image1.png" alt="Image 1"><p>Cyber Training 1</p></div>
+                <div class="cyberImage"><img src="../images/image2.png" alt="Image 2"><p>Cyber Training 2</p></div>
+                <div class="cyberImage"><img src="../images/image3.png" alt="Image 3"><p>Cyber Training 3</p></div>
+                <div class="cyberImage"><img src="../images/image4.png" alt="Image 4"><p>Cyber Training 4</p></div>
+                <div class="cyberImage"><img src="../images/image5.png" alt="Image 5"><p>Cyber Training 5</p></div>
+                <div class="cyberImage"><img src="../images/image6.png" alt="Image 6"><p>Cyber Training 6</p></div>
+                <div class="cyberImage"><img src="../images/image7.png" alt="Image 7"><p>Cyber Training 7</p></div>
+                <div class="cyberImage"><img src="../images/image8.png" alt="Image 8"><p>Cyber Training 8</p></div>
             </section>
 
             <article> 
