--- a/pages/about.html
+++ b/pages/about.html
@@ -27,6 +27,7 @@
     section div.cyberImage {
         position: relative;
         background-color:blanchedalmond;
+        width:50px;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     }
     section div.icyberImage img {
