--- a/pages/about.html
+++ b/pages/about.html
@@ -18,18 +18,18 @@
         box-shadow: -10px 10px 10px;
     }
 
-    section div.image-grid {
+    div.image-grid {
             display: grid;
             gap: 15px;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             margin-top: 20px;
         }
-    section div.cyberImage {
+    div.cyberImage {
         position: relative;
         background-color:blanchedalmond;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     }
-    section div.icyberImage img {
+    div.icyberImage img {
         width: 50;
         display: block;
     }
