--- a/pages/data.html
+++ b/pages/data.html
@@ -99,7 +99,7 @@
                 <a href="join.html">JOIN</a>
             </p>
             <p>
-                <a href="Shapes.html">SHAPE</a>
+                <a href="shape.html">SHAPE</a>
             </p>
         </nav>
     </header>
