--- a/pages/join.html
+++ b/pages/join.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!doctype HTML> 
+<html> 
+<head> 
 <meta charset="UTF-8">
-<title>JTerm Project</title>
-<link rel="stylesheet" href="styles.css">
+<title> Term Project</title>
+<link rel="stylesheet" href="../mystyles.css">
 <style>
     main {
         border: 8px solid var(--dark-color); 
