--- a/pages/shape.html
+++ b/pages/shape.html
@@ -5,7 +5,7 @@
 <title> Term Project</title>
 <link rel="stylesheet" href="../mystyles.css">
     <style>
-    main section.shapes-grid {
+    section.shapes-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
             gap: 10px;
