--- a/pages/join.html
+++ b/pages/join.html
@@ -31,6 +31,10 @@
         font-weight: bold;
     }
 
+    legend.personalInfo{
+        margin-block: 10px;
+    }
+
     input[type="text"],
     input[type="email"],
     input[type="tel"],
@@ -49,7 +53,7 @@
     /* Button styles */
     input[type="submit"],
     input[type="reset"] {
-        padding: 5px 15px;
+        padding: 25px 20px;
         background-color: var(--dark-color);
         color: white;
         border: none;
@@ -60,15 +64,7 @@
     input[type="reset"]:hover {
         background-color: var(--light-color);
     }
-        footer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
+
 
 </style>
 </head>
@@ -103,7 +99,7 @@
 
         <form>
             <fieldset>
-                <legend>Personal information</legend>
+                <legend class="personalInfo">Personal information</legend>
                 <label for="name">Name:</label><br>
                 <input type="text" id="name" name="name"><br>
                 <label for="address">Address:</label><br>
@@ -115,7 +111,7 @@
             </fieldset>
 
             <fieldset>
-                <legend>Interests</legend>
+                <legend>Interested course</legend>
                 <input type="checkbox" id="interest1" name="interest1">
                 <label for="interest1">Sign me up for coupons.</label><br>
                 <input type="checkbox" id="interest2" name="interest2">
@@ -127,15 +123,15 @@
             </fieldset>
 
             <fieldset>
-                <legend>How many years have you been a pawsome customer</legend>
-                <input type="radio" id="experience1" name="experience" value="1">
-                <label for="experience1">0</label>
-                <input type="radio" id="experience2" name="experience" value="2">
-                <label for="experience2">0-1</label>
-                <input type="radio" id="experience3-5" name="experience" value="3-5">
-                <label for="experience3-5">1-3</label>
-                <input type="radio" id="experience6-10" name="experience" value="6-10">
-                <label for="experience6-10">3-10</label>
+                <legend>Years of cyber experience</legend>
+                <input type="radio" id="experience1" name="experience">
+                <label for="experience1">0</label><br>
+                <input type="radio" id="experience2" name="experience">
+                <label for="experience2">0-3</label><br>
+                <input type="radio" id="experience3" name="experience">
+                <label for="experience3-5">3-5</label><br>
+                <input type="radio" id="experience4" name="experience">
+                <label for="experience6-10">5-10</label><br>
             </fieldset>
 
             <label for="comments">Comments:</label><br>
