--- a/pages/join.html
+++ b/pages/join.html
@@ -112,14 +112,17 @@
 
             <fieldset>
                 <legend>Interested course</legend>
-                <input type="checkbox" id="interest1" name="interest1">
-                <label for="interest1">Sign me up for coupons.</label><br>
-                <input type="checkbox" id="interest2" name="interest2">
-                <label for="interest2">Please email me about exciting new products and services.</label><br>
-                <input type="checkbox" id="interest3" name="interest3">
-                <label for="interest3">Add me to Pawsome's newsletter.</label><br>
-                <input type="checkbox" id="interest4" name="interest4">
-                <label for="interest4">Add me to the waitlist for limited edition products.</label><br>
+                <select name="cyberCourse" id="cyberCourse">
+                    <optgroup label="Entry-Level training Courses"> 
+                    <option value="package1"> Employee Cybersecurity Best Practice Training-One</option>
+                    <option value="package2">Employee Cybersecurity Best Practice Training-Two</option>
+                </optgroup>
+                <optgroup label="Advanced Training Courses">
+                    <option value="storm">Cyber Storm</option>
+                    <option value="tableTop">TableTop Exercise Package</option>
+                 </optgroup>
+                </select>
+
             </fieldset>
 
             <fieldset>
