--- a/pages/join.html
+++ b/pages/join.html
@@ -96,13 +96,13 @@
         <form>
             <fieldset>
                 <legend class="personalInfo">Personal information</legend>
-                <label for="name">Name:</label><br>
+                <label for="name">Name:</label>
                 <input type="text" id="name" name="name"><br>
-                <label for="address">Address:</label><br>
+                <label for="address">Address:</label>
                 <input type="text" id="address" name="address"><br>
-                <label for="email">Email:</label><br>
+                <label for="email">Email:</label>
                 <input type="email" id="email" name="email"><br>
-                <label for="phone">Phone:</label><br>
+                <label for="phone">Phone:</label>
                 <input type="tel" id="phone" name="phone"><br>
             </fieldset>
 
