--- a/pages/join.html
+++ b/pages/join.html
@@ -42,6 +42,7 @@
     textarea {
         width: 25%;
         padding: 5px;
+        margin-left:15px;
         margin-bottom: 10px;
         border: 1px solid var(--light-color);
     }
