--- a/pages/join.html
+++ b/pages/join.html
@@ -9,6 +9,7 @@
         border: 8px solid var(--dark-color); 
         padding: 0 20px; /* Padding on left and right */
         padding-bottom: 60px; 
+        margin-inline:auto;
     }
 
     form {
