--- a/pages/about.html
+++ b/pages/about.html
@@ -18,12 +18,12 @@
         box-shadow: -10px 10px 10px;
     }
 
-    div.image-grid {
-            display: grid;
-            gap: 15px;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            margin-top: 20px;
-        }
+    section.image-grid {
+        display: grid;
+        gap: 15px;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        margin-top: 20px;
+    }
     div.cyberImage {
         position: relative;
         background-color:blanchedalmond;
