--- a/pages/about.html
+++ b/pages/about.html
@@ -35,8 +35,8 @@
     }
     div.cyberImage  p {
         position: absolute;
-        bottom: 5px;
-        left: 50%;
+       /* bottom: 5px;
+        left: 50%;*/
         transform: translateX(-50%);
         width: 100%;
         text-align: center;
@@ -86,6 +86,8 @@
                 <div class="cyberImage"><img src="../images/image8.png" alt="Image 8"><p>Cyber Training 8</p></div>
             </section>
 
+            <div> </div>
+    
             <article> 
                 <h2>Our History</h2>
                 <img width="900" src="../images/history.png" alt="Our History">
