--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     }
     div.icyberImage img {
-        width: 50;
+        max-width:100%;
         display: block;
     }
     div.cyberImage  p {
